fix(tabstrip): ie11 squashes tabs

--- a/packages/default/scss/tabstrip/_layout.scss
+++ b/packages/default/scss/tabstrip/_layout.scss
@@ -35,6 +35,7 @@
                 padding: 0;
                 border: $tabstrip-item-border-width solid transparent;
                 position: relative;
+                flex-shrink: 0;
                 display: flex;
                 flex-direction: row;
                 align-items: stretch;
@@ -61,6 +62,9 @@
                     flex: none;
                 }
             }
+        }
+        @at-root .k-ie11 .k-tabstrip-items {
+            white-space: nowrap;
         }
 
         > .k-content {
